--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Vi har tilføjet understøttelse af adskillige nye funktioner i iOS 18, herunder tilladelser til beskyttelse af kontaktoplysninger og tilpasning af appikoner. Når du konfigurerer din iOS-startskærm til at bruge mørke eller tonede ikoner, vil Signal tilpasse sig i overensstemmelse hermed. Gå helt monokromt, eller vælg et skema, der matcher din farverige fantasi.
