--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Wir haben Unterstützung für mehrere neue Funktionen in iOS 18 hinzugefügt, darunter Datenschutz-Berechtigungen für Kontakte und die Anpassung von App-Symbolen. Wenn du deinen iOS-Home-Bildschirm zum Verwenden dunkler oder getönter Symbole konfigurierst, passt sich Signal entsprechend an. Entscheide dich für ein monochromes Design oder wähle ein Farbschema, das so bunt ist wie deine Fantasie.
