--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• हमने iOS 18 में कई नए फ़ीचर्स के लिए सपोर्ट जोड़ा है, जिसमें संपर्क निजता से जुड़ी अनुमतियाँ और ऐप आइकन कस्टमाइज़ेशन शामिल हैं। अब अगर आप अपने iOS की होम स्क्रीन को गहरे या रंग वाले आइकन इस्तेमाल करने के लिए कॉन्फ़िगर करते हैं, तो Signal उसी के मुताबिक बदल जाएगा। पूरी तरह से मोनोक्रोम को चुनें या ऐसी स्कीम चुनें जो आपकी रंग-बिरंगी कल्पना से मेल खाती हो।
