--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Dodaliśmy obsługę nowych funkcji dostępnych w systemie iOS 18, takich jak uprawnienia w zakresie prywatności kontaktów i dostosowywanie ikon aplikacji. Teraz, gdy skonfigurujesz ekran główny systemu iOS tak, aby używał ciemnych lub zabarwionych ikon, aplikacja Signal dostosuje się do zmiany. Postaw na całkowitą monochromatyczność lub wybierz schemat, który odzwierciedla Twoją kolorową wyobraźnię.
