--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Ми додали підтримку кількох нових функцій в iOS 18, як-от дозвіл на обмежений доступ до контактів та індивідуальні налаштування для значка застосунку. Якщо ви зміните значки на головному екрані на темні чи кольорові, значок Signal адаптується відповідним чином. Тож сміливо обирайте між елегантним монохромом або колірною гамою, що підкреслить вашу різнобарвну уяву.
