--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Hem afegit compatibilitat amb diverses de les noves funcions de l'iOS 18, incloent-hi els permisos de privacitat de contactes i la personalització de les icones d'apps.
