--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Προσθέσαμε υποστήριξη για διάφορες νέες δυνατότητες στο iOS 18, συμπεριλαμβανομένων των δικαιωμάτων απορρήτου επαφών και της προσαρμογής εικονιδίων εφαρμογών.
