--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Lisäsimme tuen useille iOS 18:n uusille ominaisuuksille, mukaan lukien yhteystietojen tietosuojaluvat ja sovelluskuvakkeiden mukauttaminen. Nyt kun määrität iOS-aloitusnäytön käyttämään tummia tai sävytettyjä kuvakkeita, Signal mukautuu vastaavasti. Voit valita yksivärisen tai mielikuvitustasi vastaavan värikkään mallin.
