--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Abbiamo aggiunto il supporto per tante nuove funzioni su iOS 18, tra cui la personalizzazione delle icone delle app e le autorizzazioni per la privacy per i contatti. Quindi se configuri la Home di iOS per usare icone con il tema dark o a tinte, Signal si adatterà di conseguenza. Qualsiasi stile sceglierai per il tuo telefono, l'icona di Signal sarà sempre alla moda!
