--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Adicionámos suporte para várias funcionalidades novas no iOS 18, incluindo permissões de privacidade dos contactos e personalização de ícones da app. Agora, ao configurar o ecrã inicial do iOS para usar ícones escuros ou matizados, o Signal adaptar-se-á.
