--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• Мы добавили поддержку нескольких новых функций в iOS 18, включая разрешения на конфиденциальность контактов и настройку значка приложения. Теперь при настройке главного экрана iOS на использование тёмных или тонированных значков Signal будет адаптироваться соответствующим образом. Сделайте значок полностью монохромным или выберите цветовую гамму, соответствующую вашему богатому воображению.
