--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• We added support for several new features in iOS 18, including contact privacy permissions and app icon customization. Now when you configure your iOS Home Screen to use dark or tinted icons, Signal will adapt accordingly. Go completely monochrome or pick a scheme that matches your colorful imagination.
+• เราเพิ่มความสามารถในการรองรับฟีเจอร์ใหม่ๆ บน iOS 18 ไม่ว่าจะเป็นการเลือกให้สิทธิ์เข้าถึงรายชื่อผู้ติดต่อที่เป็นส่วนตัวยิ่งขึ้น รวมถึงการปรับแต่งไอคอนของแอป
